// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds commands 1`] = `
Array [
  Object {
    "description": "test one ",
    "name": "one",
    "options": [Function],
  },
  Object {
    "description": "test two ",
    "name": "two",
    "options": [Function],
  },
]
`;

exports[`creates aliases 1`] = `
Array [
  Object {
    "alias": "verbose",
    "name": "v",
  },
  Object {
    "alias": "version",
    "name": "V",
  },
]
`;

exports[`runs the application 1`] = `
Array [
  Object {
    "description": "change to color of a previously sent payload",
    "name": "color <uuid> <color>",
    "options": [Function],
  },
]
`;

exports[`runs the application 2`] = `
Array [
  Object {
    "alias": "help",
    "name": "h",
  },
]
`;

exports[`runs the application 3`] = `"h"`;

exports[`runs the application and uses send as the default command 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "test message",
          ],
        },
        "origin": Object {
          "file": "/src/commands/Send.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;
